# dcfs

./: .gitignore  Dockerfile  Dockerfile.frontend  README.md  config-test.yaml  dcfs-fe-nginx.conf  demo-config.yaml  freebuff session.txt  main.py  makefile  potential_other_storage_backends.txt  pyproject.toml
.github/workflows/: docker-build-push.yml  gh-pages.yml  test.yml
asgidav/: app.py  async_map.py  reqres.py
dcfs/: config.py  reqres.py
dcfs-gh-pages/: README.md  image-loader.js  next.config.ts  package-lock.json  package.json
dcfs-gh-pages/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
dcfs-gh-pages/.next/cache/: .rscinfo  .tsbuildinfo
dcfs-gh-pages/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
dcfs-gh-pages/app/: layout.tsx  page.tsx  theme-provider.tsx
dcfs-gh-pages/app/config-generator/: page.tsx
dcfs-gh-pages/app/discord-app/: discord-import-dialog.tsx  discord-theme.ts  file-explorer.tsx  manager-client.ts  page.tsx
dcfs/app/: __init__.py  fs_cache.py  utils.py
dcfs/app/ftp/: __init__.py  (+1 more)
dcfs/auth/: basic.py  bearer.py
dcfs/core/: cache.py  client.py  ops.py
dcfs/crypto/: __init__.py  bootstrap.py  cipher.py  header.py  kdf.py  repository.py  stream.py
dcfs/discord/: __init__.py  interface.py
dcfs/errors/: __init__.py  dcfs.py  discord.py
dcfs/utils/: message_cache.py  retry.py
tests/: test_main.py  test_sftp_factory.py
tests/test_asgidav/: common.py  test_app.py  test_async_map.py  test_folder.py  test_member.py  test_reqres.py  test_resource.py
tests/test_crypto/: test_cipher.py  test_header.py  test_kdf.py  test_large_file_upload.py  test_repository.py  test_upload_retry.py
(+152 files in other folders)
