[project]
name = "dcfs"
version = "0.1.0"
package-mode = false
description = "Discord becomes a WebDAV server."
authors = [
    {name = "WheatCarrier",email = "wheatcarrier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "discord.py (>=2.5.0,<3.0.0)",
    "pyrate-limiter (>=3.9.0,<4.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.124.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "lru-dict (>=1.3.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pygithub (>=2.8.1,<3.0.0)",
    "rsa (==4.9.1)",
    "aiohttp (>=3.10.0,<4.0.0)",
    "cryptography (>=42.0.0,<46.0.0)",
    "argon2-cffi (>=23.1.0,<26.0.0)",
    "uvloop (>=0.21.0,<0.22.0) ; platform_system != \"Windows\"",
    "aioftp (>=0.27.2,<0.28.0)",
    "asyncssh (>=2.23.1,<3.0.0)",
    "impacket (>=0.13.1,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
ruff = "^0.12.8"
black = "^25.1.0"
pytest = "^8.4.1"
pytest-asyncio = "^0.25.1"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"
types-pyyaml = "^6.0.12.20250809"
pre-commit = "^4.3.0"
lxml-stubs = "^0.5.1"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "F",  # Formatting
    "I",  # Imports
    "R",  # Refactoring
    "S",  # Style
    "T",  # Type checking
]
ignore = [
    "E501",  # Line too long
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/tests/*",
    "test_*.py",
    "*_test.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
